--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<h2>Login</h2>
+{{!-- <h2>Login</h2>
 
 <form class="form login-form">
   <div class="form-group">
@@ -14,4 +14,48 @@
   </div>
 </form>
 
-<script src="/js/login.js"></script>
+<script src="/js/login.js"></script> --}}
+
+
+<div class="bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-cyan-200 via-yellow-100 to-teal-100 relative isolate pt-14 flex min-h-full items-center justify-center px-4 py-12 sm:px-6 lg:px-8">
+    <div class="w-full max-w-sm space-y-10">
+      <div>
+        <img class="mx-auto h-32 w-auto shadow-xl rounded-full" src="/images/owlsmaincircle.png" alt="Your Company">
+        <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
+      </div>
+      <form class="space-y-6" action="#" method="POST">
+        <div class="relative -space-y-px rounded-md shadow-sm">
+          <div class="pointer-events-none absolute inset-0 z-10 rounded-md ring-1 ring-inset ring-gray-300"></div>
+          <div class="shadow-xl">
+            <label for="email-address" class="sr-only">Email address</label>
+            <input id="email-address" name="email" type="email" autocomplete="email" required class="relative block w-full rounded-t-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-10" placeholder="Email address">
+          </div>
+          <div>
+            <label for="password" class="sr-only">Password</label>
+            <input id="password" name="password" type="password" autocomplete="current-password" required class="relative block w-full h-px60 rounded-b-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-10" placeholder="Password">
+          </div>
+        </div>
+  
+        <div class="flex items-center justify-between">
+          <div class="flex items-center">
+            <input id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600">
+            <label for="remember-me" class="ml-3 block text-sm leading-6 text-gray-900">Remember me</label>
+          </div>
+  
+          <div class="text-sm leading-6">
+            <a href="#" class="font-semibold text-[#F59F20] hover:text-[#CC9767]">Forgot password?</a>
+          </div>
+        </div>
+
+        <div class="flex justify-center items-center">
+          <button type="submit" class="rounded-full bg-tealowl4 px-32 py-3 text-base font-semibold text-white shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-tealowl2 duration-300  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tealowl2">Login</button>
+        </div>
+      </form>
+  
+      <p class="text-center text-sm leading-6 text-gray-500">
+        Not a member?
+        <a href="#" class="font-semibold text-[#F59F20] hover:text-[#CC9767]">Start a 14-day free trial</a>
+      </p>
+    </div>
+  </div>
+  
