refactoring main files

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,7 @@
-<form class="grid bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-cyan-200 via-yellow-100 to-teal-100 lg:gap-x-12 lg:justify-center">
-  <!--title-->
+<form
+  class="grid bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-cyan-200 via-yellow-100 to-teal-100 lg:gap-x-12 lg:justify-center"
+>
+<!--title-->
   <h2 class="text-base mt-36 font-semibold leading-7 text-[#F59F20]">Create a
     Profile</h2>
   <!--pasword create-->
