--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -31,7 +31,7 @@
           <label
             for="password"
             class="block text-sm font-medium leading-6 text-gray-900"
-          >Passowrd</label>
+          >Password</label>
           <div class="mt-2">
             <div
               class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md"
