Additional content added to pages

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <!-- Hero Section -->
-      <div class="relative isolate pt-14">
+      <div class="relative isolate pt-0">
         <div class="mx-auto max-w-7xl px-6 p-5 sm:py-32 lg:flex lg:items-center lg:gap-x-10 lg:px-8 lg:py-10">
           <div class="mx-auto max-w-2xl lg:mx-0 lg:flex-auto">
             <div class="flex">
@@ -7,8 +7,6 @@
             <p class="text-base font-semibold leading-7 text-owltext1">Get the Owlmobile Review help you need</p>
             <h1 class="mt-10 max-w-lg text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Wheel Wisdom</h1>
             <p class="mt-6 text-lg leading-8 text-gray-600">Owl you in the market for a new car? Or perhaps you're a passionate automobile aficionado looking to stay updated with the latest industry trends and expert opinions. Look no further! Wheel Wisdom is here to revolutionize your car-buying experience.</p>
-
-            {{{body}}}
 
 <!-- Search Bar  -->
       <form class="flex items-center py-10 mx-auto max-w-2xl text-center">   
@@ -39,3 +37,5 @@
             </svg>
           </div>
         </div>
+      {{> testimonials}}
+      {{> newsletter}}
