--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -2,8 +2,7 @@
   <div class="mx-auto max-w-7xl overflow-hidden px-6 pb-0 sm:py-24 lg:px-8">
     <nav
       class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12"
-      aria-label="Footer"
-    >
+      aria-label="Footer">
       <div class="pb-6">
         <a
           href="#"
