--- a/views/features.handlebars
+++ b/views/features.handlebars
@@ -2,11 +2,11 @@
   <div class="mx-auto max-w-md px-6 text-center sm:max-w-3xl lg:max-w-7xl lg:px-8">
     <h2 class="text-lg font-semibold text-owltext1">Reviews Faster</h2>
     <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Everything you need for your owls and your reviews!</p>
-    <p class="mx-auto mt-5 max-w-prose text-xl text-gray-500">Phasellus lorem quam molestie id quisque diam aenean nulla in. Accumsan in quis quis nunc, ullamcorper malesuada. Eleifend condimentum id viverra nulla.</p>
+    <p class="mx-auto mt-5 max-w-prose text-xl text-gray-500">A place to connect with car enthusiasts and get great information.</p>
     <div class="mt-20">
       <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 lg:grid-cols-3">
         <div class="pt-6">
-          <div class="flow-root rounded-lg bg-gray-50 px-6 pb-8">
+          <div class="bg-opacity-75 shadow-lg flow-root  rounded-lg bg-gray-50 px-6 pb-8">
             <div class="-mt-6">
               <div>
                 <span class="inline-flex items-center justify-center rounded-xl bg-owlsearch2 p-3 shadow-lg">
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="pt-6">
-          <div class="flow-root rounded-lg bg-gray-50 px-6 pb-8">
+          <div class="bg-opacity-75 shadow-lg flow-root rounded-lg bg-gray-50 px-6 pb-8">
             <div class="-mt-6">
               <div>
                 <span class="inline-flex items-center justify-center rounded-xl bg-owlsearch2 p-3 shadow-lg">
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="pt-6">
-          <div class="flow-root rounded-lg bg-gray-50 px-6 pb-8">
+          <div class="bg-opacity-75 shadow-lg flow-root rounded-lg bg-gray-50 px-6 pb-8">
             <div class="-mt-6">
               <div>
                 <span class="inline-flex items-center justify-center rounded-xl bg-owlsearch2 p-3 shadow-lg">
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="pt-6">
-          <div class="flow-root rounded-lg bg-gray-50 px-6 pb-8">
+          <div class="bg-opacity-75 shadow-lg flow-root rounded-lg bg-gray-50 px-6 pb-8">
             <div class="-mt-6">
               <div>
                 <span class="inline-flex items-center justify-center rounded-xl bg-owlsearch2 p-3 shadow-lg">
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="pt-6">
-          <div class="flow-root rounded-lg bg-gray-50 px-6 pb-8">
+          <div class="bg-opacity-75 shadow-lg flow-root rounded-lg bg-gray-50 px-6 pb-8">
             <div class="-mt-6">
               <div>
                 <span class="inline-flex items-center justify-center rounded-xl bg-owlsearch2 p-3 shadow-lg">
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="pt-6">
-          <div class="flow-root rounded-lg bg-gray-50 px-6 pb-8">
+          <div class="bg-opacity-75 shadow-lg flow-root rounded-lg bg-gray-50 px-6 pb-8">
             <div class="-mt-6">
               <div>
                 <span class="inline-flex items-center justify-center rounded-xl bg-owlsearch2 p-3 shadow-lg">
