--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -13,12 +13,6 @@
         <a
           href="#"
           class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-        >Blog</a>
-      </div>
-      <div class="pb-6">
-        <a
-          href="#"
-          class="text-sm leading-6 text-gray-600 hover:text-gray-900"
         >Jobs</a>
       </div>
       <div class="pb-6">
@@ -27,21 +21,9 @@
           class="text-sm leading-6 text-gray-600 hover:text-gray-900"
         >Press</a>
       </div>
-      <div class="pb-6">
-        <a
-          href="#"
-          class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-        >Accessibility</a>
-      </div>
-      <div class="pb-6">
-        <a
-          href="#"
-          class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-        >Partners</a>
-      </div>
     </nav>
     <div class="mt-10 flex justify-center space-x-10">
-      <a href="#" class="text-gray-400 hover:text-gray-500">
+      <a href="https://www.facebook.com/" class="text-gray-400 hover:text-gray-500">
         <span class="sr-only">Facebook</span>
         <svg
           class="h-6 w-6"
