--- a/views/partials/testimonials.handlebars
+++ b/views/partials/testimonials.handlebars
@@ -15,7 +15,7 @@
     <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 grid-rows-1 gap-8 text-sm leading-6 text-gray-900 sm:mt-20 sm:grid-cols-2 xl:mx-0 xl:max-w-none xl:grid-flow-col xl:grid-cols-4">
       <figure class="col-span-2 hidden sm:block sm:rounded-2xl sm:bg-white sm:shadow-lg sm:ring-1 sm:ring-gray-900/5 xl:col-start-2 xl:row-end-1">
         <blockquote class="p-12 text-xl font-semibold leading-8 tracking-tight text-gray-900">
-          <p>“Integer id nunc sit semper purus. Bibendum at lacus ut arcu blandit montes vitae auctor libero. Hac condimentum dignissim nibh vulputate ut nunc. Amet nibh orci mi venenatis blandit vel et proin. Non hendrerit in vel ac diam.”</p>
+          <p>“I totally found the car of my dreams and i couldn't have done it with the owls!!🥰”</p>
         </blockquote>
         <figcaption class="flex items-center gap-x-4 border-t border-gray-900/10 px-6 py-4">
           <img class="h-10 w-10 flex-none rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
@@ -30,13 +30,13 @@
         <div class="space-y-8 xl:row-span-2">
           <figure class="rounded-2xl bg-white p-6 shadow-lg ring-1 ring-gray-900/5">
             <blockquote class="text-gray-900">
-              <p>“Laborum quis quam. Dolorum et ut quod quia. Voluptas numquam delectus nihil. Aut enim doloremque et ipsam.”</p>
+              <p>“I was able to ask around and get great insight on the new Honda civic.”</p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
               <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
               <div>
-                <div class="font-semibold">Owlette</div>
-                <div class="text-gray-600">@Owlette</div>
+                <div class="font-semibold">JohnDoe</div>
+                <div class="text-gray-600">@Doey4454</div>
               </div>
             </figcaption>
           </figure>
@@ -46,13 +46,13 @@
         <div class="space-y-8 xl:row-start-1">
           <figure class="rounded-2xl bg-white p-6 shadow-lg ring-1 ring-gray-900/5">
             <blockquote class="text-gray-900">
-              <p>“Aut reprehenderit voluptatem eum asperiores beatae id. Iure molestiae ipsam ut officia rem nulla blanditiis.”</p>
+              <p>“OMG world class service. I tots didnt know this existed. Thanks Wheel Wisdom”</p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
               <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
               <div>
-                <div class="font-semibold">Owl Times</div>
-                <div class="text-gray-600">@OwlTimes</div>
+                <div class="font-semibold">JaneT</div>
+                <div class="text-gray-600">@Crazypink34</div>
               </div>
             </figcaption>
           </figure>
@@ -64,13 +64,13 @@
         <div class="space-y-8 xl:row-start-1">
           <figure class="rounded-2xl bg-white p-6 shadow-lg ring-1 ring-gray-900/5">
             <blockquote class="text-gray-900">
-              <p>“Voluptas quos itaque ipsam in voluptatem est. Iste eos blanditiis repudiandae. Earum deserunt enim molestiae ipsum perferendis recusandae saepe corrupti.”</p>
+              <p>“WheelWisdom rocks, recommending it to everyone”</p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
               <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
               <div>
-                <div class="font-semibold">Owlful</div>
-                <div class="text-gray-600">@Owlful</div>
+                <div class="font-semibold">Owen Z.</div>
+                <div class="text-gray-600">@shopper4life</div>
               </div>
             </figcaption>
           </figure>
@@ -80,13 +80,13 @@
         <div class="space-y-8 xl:row-span-2">
           <figure class="rounded-2xl bg-white p-6 shadow-lg ring-1 ring-gray-900/5">
             <blockquote class="text-gray-900">
-              <p>“Molestias ea earum quos nostrum doloremque sed. Quaerat quasi aut velit incidunt excepturi rerum voluptatem minus harum.”</p>
+              <p>“I've learned so much for so many other chevy truck owners”</p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
               <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
               <div>
-                <div class="font-semibold">Ovowel</div>
-                <div class="text-gray-600">@Ovowel</div>
+                <div class="font-semibold">Anonymous</div>
+                <div class="text-gray-600">@vroomvroom</div>
               </div>
             </figcaption>
           </figure>
