--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,56 +1,54 @@
 <form class="form signup-form">
-  <!-- component -->
+<!-- component -->
 <div class="bg-grey-lighter min-h-screen flex flex-col">
-            <div class="container max-w-md mt-48 mx-auto flex-1 flex flex-col items-center justify-center px-2">
-                <div class="bg-white bg-opacity-75 px-6 py-8 rounded shadow-md text-black w-full">
-                    <h1 class="text-yellow-500 mb-8 text-3xl text-center">Sign up</h1>
-                    <input 
-                        type="text"
-                        class="block border border-grey-light w-full p-3 rounded mb-4"
-                        name="fullname"
-                        placeholder="Full Name" />
+<div class="container max-w-md mx-auto flex-1 flex flex-col items-center justify-center px-2">
+    <div class="bg-white px-6 py-8 rounded shadow-md text-black w-full">
+        <h1 class="mb-8 text-3xl text-center">Sign up</h1>
+        <input 
+            type="text"
+            class="form-input block border border-grey-light w-full p-3 rounded mb-4"
+            name="fullname"
+            id="username-signup"
+            placeholder="Full Name"/>
 
-                    <input 
-                        type="text"
-                        class="block border border-grey-light w-full p-3 rounded mb-4"
-                        name="email"
-                        placeholder="Email" />
+        <input 
+            type="text"
+            class="form-input block border border-grey-light w-full p-3 rounded mb-4"
+            name="email"
+            id="email-signup"
+            placeholder="Email"/>
 
-                    <input 
-                        type="password"
-                        class="block border border-grey-light w-full p-3 rounded mb-4"
-                        name="password"
-                        placeholder="Password" />
-                    <input 
-                        type="password"
-                        class="block border border-grey-light w-full p-3 rounded mb-4"
-                        name="confirm_password"
-                        placeholder="Confirm Password" />
+        <input 
+            type="password"
+            class="form-input block border border-grey-light w-full p-3 rounded mb-4"
+            name="password"
+            id="password-signup"
+            placeholder="Password"/>
 
-                    <button
-                        type="submit"
-                        class="w-full text-center rounded-full bg-tealowl4 px-3.5 py-2 text-sm font-semibold text-white shadow-sm transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-tealowl2 duration-300  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tealowl2"
-                    >Create Account</button>
-                    </form>
+        <button
+            type="submit"
+            class="w-full text-center rounded-full bg-tealowl4 px-3.5 py-2 text-sm font-semibold text-white shadow-sm transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-tealowl2 duration-300  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tealowl2"
+        >Create Account</button>
+        </form>
 
-                    <div class="text-center text-sm text-grey-dark mt-4">
-                        By signing up, you agree to the 
-                        <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
-                            Terms of Service
-                        </a> and 
-                        <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
-                            Privacy Policy
-                        </a>
-                    </div>
-                </div>
-
-                <div class="text-grey-dark mt-6">
-                    Already have an account? 
-                    <a class="no-underline border-b border-blue text-blue" href="../login/">
-                        Log in
-                    </a>.
-                </div>
-            </div>
+        <div class="text-center text-sm text-grey-dark mt-4">
+            By signing up, you agree to the 
+            <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
+                Terms of Service
+            </a> and 
+            <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
+                Privacy Policy
+            </a>
         </div>
+    </div>
 
-        <script src="./js/signup.js"></script>
+    <div class="text-grey-dark mt-6">
+        Already have an account? 
+        <a class="no-underline border-b border-blue text-blue" href="../login/">
+            Log in
+        </a>.
+    </div>
+</div>
+</div>
+
+<script src="./js/signup.js"></script>
