--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,3 @@
-{{!-- <h2>Login</h2>
-
-<form class="form login-form">
-  <div class="form-group">
-    <label for="email-login">email:</label>
-    <input class="form-input" type="text" id="email-login" />
-  </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
-  </div>
-</form>
-
-<script src="/js/login.js"></script> --}}
-
-
 <div class="bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-cyan-200 via-yellow-100 to-teal-100 relative isolate pt-14 flex min-h-full items-center justify-center px-4 py-12 sm:px-6 lg:px-8">
     <div class="w-full max-w-sm space-y-10">
       <div>
@@ -28,12 +9,12 @@
         <div class="relative -space-y-px rounded-md shadow-sm">
           <div class="pointer-events-none absolute inset-0 z-10 rounded-md ring-1 ring-inset ring-gray-300"></div>
           <div class="shadow-xl">
-            <label for="email-address" class="sr-only">Email address</label>
-            <input id="email-address" name="email" type="email" autocomplete="email" required class="relative block w-full rounded-t-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-10" placeholder="Email address">
+            <label for="email-login" class="sr-only">Email address</label>
+            <input id="email-login" name="email" type="email" autocomplete="email" required class="form-input relative block w-full rounded-t-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-10" placeholder="Email address">
           </div>
           <div>
-            <label for="password" class="sr-only">Password</label>
-            <input id="password" name="password" type="password" autocomplete="current-password" required class="relative block w-full h-px60 rounded-b-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-10" placeholder="Password">
+            <label for="password-login" class="sr-only">Password</label>
+            <input id="password-login" name="password" type="password" autocomplete="current-password" required class="form-input relative block w-full h-px60 rounded-b-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-100 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-10" placeholder="Password">
           </div>
         </div>
   
@@ -59,8 +40,5 @@
       </p>
     </div>
   </div>
-
-
-
 
 <script src="./js/login.js"></script>
