--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -139,13 +139,13 @@
           <p class="text-center text-sm leading-6 text-gray-500">Minnesota</p>
         </li>
          <li class="w-9/12 items-center">
-          <img class="aspect-[14/13] w-full rounded-full object-cover shadow-lg" src="/images/owlsmaincircle.png" alt="">
+          <img class="aspect-[14/13] w-full rounded-full object-cover shadow-lg" src="/images/bv.png" alt="">
           <h3 class="text-center mt-6 text-lg font-semibold leading-8 tracking-tight text-black">Benjamin Vega</h3>
           <p class="text-center text-base leading-7 text-owltext1">Frontend Developer</p>
           <p class="text-center text-sm leading-6 text-gray-500">Texas</p>
         </li>
          <li class="w-9/12 items-center">
-          <img class="aspect-[14/13] w-full rounded-full object-cover shadow-lg" src="/images/owlsmaincircle.png" alt="">
+          <img class="aspect-[14/13] w-full rounded-full object-cover shadow-lg" src="/images/ls.png" alt="">
           <h3 class="text-center mt-6 text-lg font-semibold leading-8 tracking-tight text-black">Lauren Smith</h3>
           <p class="text-center text-base leading-7 text-owltext1">Backend API</p>
           <p class="text-center text-sm leading-6 text-gray-500">Florida</p>
