Fixed minor issues with database and routing

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
             <p class="mt-6 text-lg leading-8 text-gray-600">Owl you in the market for a new car? Or perhaps you're a passionate automobile aficionado looking to stay updated with the latest industry trends and expert opinions. Look no further! Wheel Wisdom is here to revolutionize your car-buying experience.</p>
 
 <!-- Search Bar  -->
-      <form action="/product" method="GET" "flex items-center py-10 mx-auto max-w-2xl text-center">   
+      <form action="/product" method="GET" class="flex items-center py-10 mx-auto max-w-2xl text-center">   
       <label for="voice-search" class="sr-only">Search</label>
         <div class="relative w-full">
           <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
