Refactored and enabled some function

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,4 +1,13 @@
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"/>
+ <h2>Search Results</h2>
+{{#each vehicles}}
+  <p>Year: {{this.year}}</p>
+  <p>Make: {{this.manufacturer}}</p>
+  <p>Model: {{this.model}}</p>
+{{/each}}
+ 
 
+ 
  <body class="text-blueGray-700 antialiased ">
       
       <div id="root">
