--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,10 +1,15 @@
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"/>
- <h2>Search Results</h2>
-{{#each vehicles}}
-  <p>Year: {{this.year}}</p>
-  <p>Make: {{this.manufacturer}}</p>
-  <p>Model: {{this.model}}</p>
-{{/each}}
+ <h1>Product Search Results</h1>
+  
+   {{#if results.length}}
+    <ul>
+      {{#each results}}
+        <li>Year: {{year}}, Manufacturer: {{manufacturer}}, Model: {{model}}</li>
+      {{/each}}
+    </ul>
+  {{else}}
+    <p>No results found.</p>
+  {{/if}}
  
 
  
