Switch post routes to get for search function

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
 
 
 <!-- Search Bar  -->
-  <form action="/search" method="POST" class="flex items-center py-10 mx-auto max-w-2xl text-center">
+  <form action="/search" method="GET" class="flex items-center py-10 mx-auto max-w-2xl text-center">
   <label for="search-bar" class="sr-only">Search</label>
   <div class="relative w-full">
     <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
