--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/output.css">
+  <script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
 </head>
 <body>
 
@@ -34,7 +35,53 @@
           </div>
           <div class="hidden md:flex md:items-center md:space-x-6">
             {{#if loggedIn}}
-            <button id="logout" class="rounded-full bg-tealowl4 px-3.5 py-2 text-sm font-semibold text-white shadow-sm transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-tealowl2 duration-300  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tealowl2">Logout</button>
+
+
+                <div class="mx-auto max-w-7xl px-2 sm:px-4 lg:px-8">
+        <div class="relative flex items-center justify-between">
+          <div class="flex flex-1 justify-center px-2 lg:ml-6 lg:justify-end">
+            <div class="w-full max-w-lg lg:max-w-xs">
+              <label for="search" class="sr-only">Search</label>
+              <div class="relative">
+                <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+                  <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd" />
+                  </svg>
+                </div>
+                <input id="search" name="search" class="block w-full rounded-md border-0 bg-gray-100 py-1.5 pl-10 pr-3 text-gray-300 placeholder:text-gray-400 focus:bg-white focus:text-gray-100 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Search" type="search">
+              </div>
+            </div>
+          </div>
+          <div class="hidden lg:ml-4 lg:block">
+            <div class="flex items-center">
+              <!-- Profile dropdown -->
+              <div class="relative ml-4 flex-shrink-0" id="user-menu">
+  <div>
+    <button type="button" class="flex rounded-full" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+      <span class="sr-only">Open user menu</span>
+      <img class="h-8 w-8 rounded-full" src="https://images.pexels.com/photos/106685/pexels-photo-106685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+    </button>
+  </div>
+
+  <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none opacity-0 transform scale-95 transition-opacity duration-300 transition-transform" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" id="user-menu-items">
+    <div class="hover:bg-green-200 transition-colors duration-300">
+      <button class="block px-4 py-2 text-sm text-gray-700 focus:outline-none" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</button>
+    </div>
+    <div class="hover:bg-green-200 transition-colors duration-300">
+      <button class="block px-4 py-2 text-sm text-gray-700 focus:outline-none" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</button>
+    </div>
+    <div class="hover:bg-green-200 transition-colors duration-300">
+      <button class="block px-4 py-2 text-sm text-gray-700 focus:outline-none" role="menuitem" tabindex="-1" id="logout">Sign out</button>
+    </div>
+  </div>
+</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+            
+            {{!-- <button id="logout" class="rounded-full bg-tealowl4 px-3.5 py-2 text-sm font-semibold text-white shadow-sm transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-tealowl2 duration-300  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tealowl2">Logout</button> --}}
 
             {{else}}
             <a href="/login" class="text-base font-medium text-white hover:text-gray-300">Log in</a>
@@ -47,8 +94,11 @@
     </header>
   {{#if loggedIn}}
   <script src="/js/logout.js"></script>
+   <script src="/js/profiledrop.js"></script>
   {{/if}}
       <div class="bg-gradient-to-r from-green-100 via-yellow-100 to-green-200">
+
+
 
         {{{ body }}}
         {{> footer }}
