--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,8 +35,6 @@
           </div>
           <div class="hidden md:flex md:items-center md:space-x-6">
             {{#if loggedIn}}
-
-
                 <div class="mx-auto max-w-7xl px-2 sm:px-4 lg:px-8">
         <div class="relative flex items-center justify-between">
           <div class="flex flex-1 justify-center px-2 lg:ml-6 lg:justify-end">
@@ -44,11 +42,9 @@
               <label for="search" class="sr-only">Search</label>
               <div class="relative">
                 <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
-                  <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd" />
-                  </svg>
+      <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
                 </div>
-                <input id="search" name="search" class="block w-full rounded-md border-0 bg-gray-100 py-1.5 pl-10 pr-3 text-gray-300 placeholder:text-gray-400 focus:bg-white focus:text-gray-100 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Search" type="search">
+                <input type="text" name="search" id="search-bar" class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-owlsearch3 focus:border-owlsearch3 block w-full pl-10  dark:bg-owlsearch dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-owlsearch3 dark:focus:border-owlsearch3" placeholder="Search..." required>
               </div>
             </div>
           </div>
@@ -56,7 +52,7 @@
             <div class="flex items-center">
               <!-- Profile dropdown -->
               <div class="relative ml-4 flex-shrink-0" id="user-menu">
-  <div>
+ <div>
     <button type="button" class="flex rounded-full" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
       <span class="sr-only">Open user menu</span>
       <img class="h-8 w-8 rounded-full" src="https://images.pexels.com/photos/106685/pexels-photo-106685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
@@ -64,12 +60,23 @@
   </div>
 
   <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none opacity-0 transform scale-95 transition-opacity duration-300 transition-transform" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" id="user-menu-items">
+<div class="py-3 flex items-center">
+    <div class="pl-3 mr-2">
+      <img class="h-8 w-8 rounded-full" src="https://images.pexels.com/photos/106685/pexels-photo-106685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+    </div>
+    <div class="-mt-1 rounded-t-md px-4 py-2 text-sm text-gray-700">
+      Welcome $User!
+    </div>
+  </div>
+
+
     <div class="hover:bg-green-200 transition-colors duration-300">
       <button class="block px-4 py-2 text-sm text-gray-700 focus:outline-none" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</button>
     </div>
-    <div class="hover:bg-green-200 transition-colors duration-300">
-      <button class="block px-4 py-2 text-sm text-gray-700 focus:outline-none" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</button>
-    </div>
+<div class="hover:bg-green-200 transition-colors duration-300">
+  <a href="/garage" class="block px-4 py-2 text-sm text-gray-700 focus:outline-none" role="menuitem" tabindex="-1" id="user-menu-item-1">Your Garage</a>
+</div>
+
     <div class="hover:bg-green-200 transition-colors duration-300">
       <button class="block px-4 py-2 text-sm text-gray-700 focus:outline-none" role="menuitem" tabindex="-1" id="logout">Sign out</button>
     </div>
@@ -94,7 +101,7 @@
     </header>
   {{#if loggedIn}}
   <script src="/js/logout.js"></script>
-   <script src="/js/profiledrop.js"></script>
+  <script src="/js/profiledrop.js"></script>
   {{/if}}
       <div class="bg-gradient-to-r from-green-100 via-yellow-100 to-green-200">
 
