--- a/views/pricing.handlebars
+++ b/views/pricing.handlebars
@@ -44,7 +44,10 @@
       <a href="#" aria-describedby="tier-hobby" class="mt-8 block rounded-md py-2.5 px-3.5 text-center text-sm font-semibold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 sm:mt-10 text-owlsearch3 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Get started today</a>
     </div>
     <div class="rounded-3xl p-8 ring-1 ring-gray-900/10 sm:p-10 relative bg-tealowl3 shadow-2xl">
-      <h3 id="tier-enterprise" class="text-base font-semibold leading-7 text-owlsearch3">Enterprise</h3>
+      <div class="flex items-center justify-between gap-x-4">
+          <h3 id="tier-startup" class="text-lg font-semibold leading-8 text-owlsearch3">Enterprise</h3>
+          <p class="rounded-full bg-tealowl2 px-2.5 py-1 text-xs font-semibold leading-5 text-black">Most popular</p>
+        </div>
       <p class="mt-4 flex items-baseline gap-x-2">
         <span class="text-5xl font-bold tracking-tight text-white">$8,999</span>
         <span class="text-base text-gray-400">/month</span>
