--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,11 +12,11 @@
                 </svg>
                 <span class="truncate">Profile</span>
               </a>
-              <a href="#" class="border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group flex items-center border-l-4 px-3 py-2 text-sm font-medium">
+              <a href="/garage" class="border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group flex items-center border-l-4 px-3 py-2 text-sm font-medium">
                 <svg class="text-gray-400 group-hover:text-gray-500 -ml-1 mr-3 h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12a7.5 7.5 0 0015 0m-15 0a7.5 7.5 0 1115 0m-15 0H3m16.5 0H21m-1.5 0H12m-8.457 3.077l1.41-.513m14.095-5.13l1.41-.513M5.106 17.785l1.15-.964m11.49-9.642l1.149-.964M7.501 19.795l.75-1.3m7.5-12.99l.75-1.3m-6.063 16.658l.26-1.477m2.605-14.772l.26-1.477m0 17.726l-.26-1.477M10.698 4.614l-.26-1.477M16.5 19.794l-.75-1.299M7.5 4.205L12 12m6.894 5.785l-1.149-.964M6.256 7.178l-1.15-.964m15.352 8.864l-1.41-.513M4.954 9.435l-1.41-.514M12.002 12l-3.75 6.495" />
                 </svg>
-                <span class="truncate">Account</span>
+                <span class="truncate">Garage</span>
               </a>
               <a href="#" class="border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group flex items-center border-l-4 px-3 py-2 text-sm font-medium">
                 <svg class="text-gray-400 group-hover:text-gray-500 -ml-1 mr-3 h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -58,7 +58,7 @@
                   <div>
                     <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Username</label>
                     <div class="mt-2 flex rounded-md shadow-sm">
-                      <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 px-3 text-gray-500 sm:text-sm">workcation.com/</span>
+                      <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 px-3 text-gray-500 sm:text-sm">wheelwisdom.com/</span>
                       <input type="text" name="username" id="username" autocomplete="username" class="block w-full min-w-0 flex-grow rounded-none rounded-r-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-sky-500 sm:text-sm sm:leading-6" value="Owls">
                     </div>
                   </div>
@@ -133,7 +133,7 @@
                 <ul role="list" class="mt-2 divide-y divide-gray-200">
                   <li class="flex items-center justify-between py-4">
                     <div class="flex flex-col">
-                      <p class="text-sm font-medium leading-6 text-gray-900" id="privacy-option-1-label">Available to hire</p>
+                      <p class="text-sm font-medium leading-6 text-gray-900" id="privacy-option-1-label">Available to Review</p>
                       <p class="text-sm text-gray-500" id="privacy-option-1-description">Nulla amet tempus sit accumsan. Aliquet turpis sed sit lacinia.</p>
                     </div>
                     <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
@@ -166,7 +166,7 @@
                   </li>
                   <li class="flex items-center justify-between py-4">
                     <div class="flex flex-col">
-                      <p class="text-sm font-medium leading-6 text-gray-900" id="privacy-option-4-label">Allow mentions</p>
+                      <p class="text-sm font-medium leading-6 text-gray-900" id="privacy-option-4-label">Allow Owls</p>
                       <p class="text-sm text-gray-500" id="privacy-option-4-description">Adipiscing est venenatis enim molestie commodo eu gravid</p>
                     </div>
                     <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
