--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -3,6 +3,7 @@
 {{#if results.length}}
 
 {{#each results}}
+
   <div class="mx-auto px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
     <!-- Product -->
     <div class="lg:grid lg:grid-cols-7 lg:grid-rows-1 lg:gap-x-8 lg:gap-y-10 xl:gap-x-16">
@@ -114,10 +115,10 @@
     <img class="inline-block h-10 w-10 rounded-full" src="/images/owlsmaincircle.png" alt="">
   </div>
   <div class="min-w-0 flex-1">
-    <form id="review-form" action="/comment" method="POST" class="relative">
+    <form id="review-form" action="/reviews" method="POST" class="relative">
       <div class="overflow-hidden rounded-lg shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-indigo-600">
-        <label for="comment" class="sr-only">Add your Review</label>
-        <textarea rows="3" id="review-input" name="comment" id="comment" class="block w-full resize-none border-0 bg-transparent py-1.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Add your comment..."></textarea>
+        <label for="review-input" class="sr-only">Add your Review</label>
+        <textarea rows="3" id="review-input" name="comment" class="block w-full resize-none border-0 bg-transparent py-1.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Add your comment..."></textarea>
 
         <!-- Spacer element to match the height of the toolbar -->
         <div class="py-2" aria-hidden="true">
