Fixed Product Background

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -9,7 +9,7 @@
       <!-- Product image -->
       <div class="lg:col-span-4 lg:row-end-1">
         <div class="aspect-h-3 aspect-w-4 overflow-hidden rounded-lg bg-gray-100">
-          <img src="/images/1981-Datsun-B-210.jpg" alt="Sample of 30 icons with friendly and fun details in outline, filled, and brand color styles." class="object-cover object-center">
+          <img src="/images/{{filename}}" alt="Sample of 30 icons with friendly and fun details in outline, filled, and brand color styles." class="object-cover object-center">
         </div>
       </div>
 
@@ -211,7 +211,7 @@
    </div>
   </div>
 
-</div>
+
 <script src="/js/submitReview.js"></script>
 
       {{/each}}
