adding reviewsContainer, helper functions event listeners.

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -133,7 +133,18 @@
           <!-- 'Customer Reviews' panel, show/hide based on tab state -->
           <div id="tab-panel-reviews" class="-mb-10" aria-labelledby="tab-reviews" role="tabpanel" tabindex="0">
             
-            
+
+            {{!-- TESTING TESTING REVIEW FORM--}}
+            <form id="reviewForm">
+      {{!-- <textarea id="reviewInput" class="mt-4 max-w-none text-gray-500" placeholder="Write a review..."></textarea> --}}
+      {{!-- <button type="submit" class="mt-2 bg-blue-500 text-white rounded px-4 py-2">Submit</button> --}}
+    </form>
+
+    <!-- Reviews section -->
+    <div id="reviewsContainer" class="mt-4"></div>
+
+
+
             <h3 class="sr-only">Customer Reviews</h3>
 
             <div class="flex space-x-4 text-sm text-gray-500">
@@ -144,7 +155,51 @@
                 <h3 class="font-medium text-gray-900">Bird Bird Lorem</h3>
                 <p><time datetime="2021-07-16">July 16, 2021</time></p>
 
-                <div class="mt-4 flex items-center">
+
+                <div class="flex space-x-4 text-sm text-gray-500">
+  <div class="flex-none py-10">
+    <img src="/images/owlsmaincircle.png" alt="" class="h-10 w-10 rounded-full bg-gray-100">
+  </div>
+  <div class="py-10">
+    <h3 class="font-medium text-gray-900">Bird Bird Lorem</h3>
+    <p><time datetime="2021-07-16">July 16, 2021</time></p>
+
+
+
+
+    <div class="mt-4 flex items-center">
+      <!-- Active: "text-yellow-400", Default: "text-gray-300" -->
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+    </div>
+    <p class="sr-only">5 out of 5 stars</p>
+
+    <div class="prose prose-sm mt-4 max-w-none text-gray-500">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quia quisquam quibusdam quis obcaecati quam animi officiis sit sequi vitae.</p>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+              {{!-- ORIGINAL CODE --}}
+                {{!-- <div class="mt-4 flex items-center">
                   <!-- Active: "text-yellow-400", Default: "text-gray-300" -->
                   <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
@@ -168,7 +223,11 @@
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quia quisquam quibusdam quis obcaecati quam animi officiis sit sequi vitae.</p>
                 </div>
               </div>
-            </div>
+            </div> --}}
+
+
+
+
             <div class="flex space-x-4 text-sm text-gray-500">
               <div class="flex-none py-10">
                 <img src="/images/owlsmaincircle.png" alt="" class="h-10 w-10 rounded-full bg-gray-100">
